--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
+    
     <!--Responsive Navbar-->
     <nav class="bg-green-100 p-3 flex items:center justify-between shadow-xl sticky top-0 z-10">
         <h1 class="text-2xl">GREENDEN</h1>
 
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 md:hidden">
+        <svg id="menuicon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 md:hidden">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
           </svg>
            
@@ -29,11 +30,29 @@
         </ul>
     </nav>
 
+     <!--Side Navbar-->
+     <section id="sidenav" class="bg-green-100 fixed z-20 top-0 transition-all duration-1000" style="width:50%; height:100vh; right:-50%">
+        <div class="text-right p-5">
+            <p id="closenav" class="inline cursor-pointer">X</p>
+        </div>
+        <ul class="flex flex-col gap-10 items-center text-gray-600">
+            <li>
+                <a class="hover:underline hover:text-black" href=""> Home </a>
+            </li>
+            <li>
+                <a class="hover:underline hover:text-black" href="product.html"> Products</a>
+            </li>
+            <li>
+                <a class="hover:underline hover:text-black" href="contact.html"> Contact</a>
+            </li>
+        </ul>
+     </section>
+
     <!--Contact Form Section-->
     <section class="bg-white dark:bg-gray-900">
         <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
             <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-gray-900 dark:text-white">Contact Us</h2>
-            <p class="mb-8 lg:mb-16 font-light text-center text-gray-500 dark:text-gray-400 sm:text-xl">Got a technical issue? Want to send feedback about a beta feature? Need details about our Business plan? Let us know.</p>
+            <p class="mb-8 lg:mb-16 font-light text-center text-gray-500 dark:text-gray-400 sm:text-xl"> Want to send feedback about our GreenDen feature? Need details about our Business plan? Let us know.</p>
             <form action="#" class="space-y-8">
                 <div>
                     <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Your email</label>
@@ -51,11 +70,14 @@
             </form>
         </div>
       </section>
+
      <!--Footer Section-->
      <section class="bg-green-100 p-10 flex flex-col mt-5 gap-5">
         <h1 class="text-4xl font-bold">GreenDen</h1>
         <p>The Standard chunk of Lorem ipsum used since 1500s is reproduced below for those interest</p>
         <p>@ 2021 Greenday.com</p>
     </section>
+
+    <script src="contact.js"></script>
 </body>
 </html>
